# QtSOAP

./: .clang-format  .git-blame-ignore-revs  CMakeLists.txt  GenerateQtSOAPConfig.cmake  INSTALL.TXT  QtSOAPConfig.cmake.in  UseQtSOAP.cmake.in  configure
doc/: index.qdoc
doc/html/: classic.css  qtsoap.qch
examples/: CMakeLists.txt
examples/easter/: CMakeLists.txt
examples/google/: CMakeLists.txt  google.cpp  google.h  google.pro  main.cpp
examples/population/: CMakeLists.txt  main.cpp  population.cpp  population.pro
src/: CMakeLists.txt  qtsoap.cpp  qtsoap.h  qtsoap.pri
